Fix navbar right spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -86,6 +86,7 @@
 .navbar .container {
   margin-left: calc(125px - 1rem);
   margin-right: calc(125px - 1rem);
+  width: 100%;
   padding-left: 0;
   padding-right: 0;
 }
